cmake_minimum_required(VERSION 3.24)
project(LAN_Party C)

set(CMAKE_C_STANDARD 11)

add_executable(LAN_Party
        main.c functions.h functions.c "../../../../../../GOG Games/lan-party-02-checker-main/main.c" "../../../../../../GOG Games/lan-party-02-checker-main/functions.c" "../../../../../../GOG Games/lan-party-02-checker-main/functions.h" "../../../../../../GOG Games/lan-party-02-checker-main/functions.h" "../../../../../../GOG Games/lan-party-02-checker-main/functions.h" functions.c functions.c functions.c)